fix: prevent layout shifting when modal is open (#3417)

--- a/apps/deploy-web/src/styles/index.css
+++ b/apps/deploy-web/src/styles/index.css
@@ -11,10 +11,6 @@ body {
   font-family: var(--font-geist-sans), ui-sans-serif, system-ui, -apple-system, sans-serif;
 }
 
-header {
-  width: calc(100% - var(--removed-body-scroll-bar-size, 0px)) !important;
-}
-
 .text-truncate {
   overflow: hidden;
   text-overflow: ellipsis;
